--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "8.2.5",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "html-loader": "^0.5.5",
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "node-sass": "^4.13.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react": "17.0.0",
+    "react-dom": "17.0.0"
   }
 }
